updating Tleaf figure

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -9725,6 +9725,27 @@
   keywords = {Eddy-covariance,Evapotranspiration,In-canopy profiles,L.,Model,Sap flux}
 }
 
+@article{stephensonRateTreeCarbon2014,
+  title = {Rate of Tree Carbon Accumulation Increases Continuously with Tree Size},
+  author = {Stephenson, N. L. and Das, A. J. and Condit, R. and Russo, S. E. and Baker, P. J. and Beckman, N. G. and Coomes, D. A. and Lines, E. R. and Morris, W. K. and Rüger, N. and Álvarez, E. and Blundo, C. and Bunyavejchewin, S. and Chuyong, G. and Davies, S. J. and Duque, Á and Ewango, C. N. and Flores, O. and Franklin, J. F. and Grau, H. R. and Hao, Z. and Harmon, M. E. and Hubbell, S. P. and Kenfack, D. and Lin, Y. and Makana, J.-R. and Malizia, A. and Malizia, L. R. and Pabst, R. J. and Pongpattananurak, N. and Su, S.-H. and Sun, I.-F. and Tan, S. and Thomas, D. and van Mantgem, P. J. and Wang, X. and Wiser, S. K. and Zavala, M. A.},
+  options = {useprefix=true},
+  date = {2014-03},
+  journaltitle = {Nature},
+  volume = {507},
+  number = {7490},
+  pages = {90--93},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/nature12914},
+  url = {https://www.nature.com/articles/nature12914},
+  urldate = {2021-09-14},
+  abstract = {A global analysis shows that for most tree species the largest trees are the fastest-growing trees, a finding that resolves conflicting assumptions about tree growth and that has implications for understanding forest carbon dynamics, resource allocation trade-offs within trees and plant senescence.},
+  issue = {7490},
+  langid = {english},
+  annotation = {Bandiera\_abtest: a Cg\_type: Nature Research Journals Primary\_atype: Research Subject\_term: Biogeochemistry;Ecosystem ecology;Forest ecology;Plant ecology Subject\_term\_id: biogeochemistry;ecosystem-ecology;forest-ecology;plant-ecology},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\5PA8LSX4\\Stephenson et al. - 2014 - Rate of tree carbon accumulation increases continu.pdf;C\:\\Users\\Me\\Zotero\\storage\\4YTXPRXZ\\nature12914.html}
+}
+
 @article{sterckCrownDevelopmentTropical2001,
   title = {Crown Development in Tropical Rain Forest Trees: Patterns with Tree Height and Light Availability},
   shorttitle = {Crown Development in Tropical Rain Forest Trees},
