--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -365,8 +365,9 @@ Sun leaves experience higher temperatures, but maximum temperatures are associat
 Shade leaves that do not experience midday depression continue to fix carbon even when afternoon air temperatures peak [@millerOnlySunlitLeaves2021]. 
 Evaluating this requires diurnal monitoring of net photosynthesis through the canopy.
  
-**Leaf photosynthetic thermal tolerance**
-Irreversible damage to photosystem II, leading to leaf necrosis and eventually leaf death, occurs at $T_{leaf}$ of $40-60^{\circ}C$ [@bakerChlorophyllFluorescenceProbe2008; @feeley_thermal_2020]. Thermal tolerance is described in terms of the temperature at which efficiency of photosystem II starts to decrease, $T_{crit}$, and the $T_{leaf}$ at which efficiency of photosystem II had decreased by 50%, $T_{50}$ [@slotLeafHeatTolerance2021]. Thermal tolerance varies globally across latitude and climate, where $T_{50}$ and $T_{crit}$ decrease across latitudes, and with elevation among tropical forests [@feeley_thermal_2020;  @slotLeafHeatTolerance2021; @osullivanThermalLimitsLeaf2017].
+Irreversible damage to photosystem II, leading to leaf necrosis and eventually leaf death, occurs at $T_{leaf}$ of $40-60^{\circ}C$ [@bakerChlorophyllFluorescenceProbe2008; @feeley_thermal_2020]. 
+Thermal tolerance is described in terms of the temperature at which efficiency of photosystem II starts to decrease, $T_{crit}$, and the $T_{leaf}$ at which efficiency of photosystem II had decreased by 50%, $T_{50}$ [@slotLeafHeatTolerance2021]. 
+Thermal tolerance varies globally across latitude and climate, where $T_{50}$ and $T_{crit}$ decrease across latitudes, and with elevation among tropical forests [@feeley_thermal_2020;  @slotLeafHeatTolerance2021; @osullivanThermalLimitsLeaf2017].
 
 Leaf thermal tolerances are more closely adapted to microclimate than macroclimate [@feeley_thermal_2020; @slotLeafHeatTolerance2021]. Chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions showed higher $T_{50}$ by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions [@hamerlynckPhotosyntheticStomatalResponses1996a]. In Australia, along a vertical gradient within the canopy, *Acacia papyrocarpa* (Benth.) showed greater $T_{50}$ and higher composite climate stress in the lower, north-facing canopy than other canopy positions, correlating with low wind-speed, greater radiation and $T_{air}$, and lower rates of heat dissapation, as indicated by longer leaf thermal time constants [@curtis_intracanopy_2019]. Additionally, thermal tolerances are explained more by leaf traits than phylogeny [@feeley_thermal_2020; @slotLeafHeatTolerance2021]. $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time, whereas $T_{50}$ was greater among species with greater LMA [@slotLeafHeatTolerance2021]. Across species sun leaves that experienced higher maximum temperatures show higher photosynthetic heat tolerance [@perezPhotosyntheticHeatTolerances2020]. However, considering sun and shade leaf differences within canopy (Table `r table_leaf_traits`), $T_{50}$ varies modestly, being slightly lower for shade than sun leaves for two of three tree species in Panama [@slotPhotosyntheticHeatTolerance2019]. The small difference in $T_{50}$ coupled with large differences in $T_{leaf}$ across thermal microenvironments implies that more thermally tolerant leaves tend to operate closer to their thermal limits and could therefore be more vulnerable to heat anomalies [@perezPhotosyntheticHeatTolerances2020].
 
