--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -380,7 +380,12 @@ The small difference in $T_{50}$ coupled with large differences in $T_{leaf}$ ac
 
 ### Respiration
 
-**Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves [Table `r table_leaf_metabolism`, @chenLeafEconomicsSpectrum2020], but its temperature sensitivity ($Q_{10}$) shows no definite trend along the vertical gradient [@bolstad_foliar_1999; @weerasingheCanopyPositionAffects2014].** Specifically, the $Q_{10}$ of respiration can be constant within vertical profiles and in seedling sun vs. shade leaves [@carterExperimentalWarmingTropical2021a; @weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006], greater in upper-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], or greater in the lower canopy [@griffinCanopyPositionAffects2002]. This may vary based on forest type [**REF**], acclimation to high temperature that decreases $Q_{10}$ [@slotGeneralPatternsAcclimation2015], or leaf traits and leaf age, as in evergreen species, $Q_{10}$ has shown to be greater in younger than older leaves [@zhouLeafageEffectsTemperature2015]. Recent observations suggest that tropical understory leaves down-regulate $Q_{10}$ with rising $T_{air}$ [@carterExperimentalWarmingTropical2021a]. 
+Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves [Table `r table_leaf_metabolism`, @chenLeafEconomicsSpectrum2020], but its temperature sensitivity ($Q_{10}$) shows no definite trend along the vertical gradient [@bolstad_foliar_1999; @weerasingheCanopyPositionAffects2014].
+Specifically, the $Q_{10}$ of respiration can be constant within vertical profiles and in seedling sun vs. shade leaves [@carterExperimentalWarmingTropical2021a; @weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006], greater in upper-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], or greater in the lower canopy [@griffinCanopyPositionAffects2002]. 
+This may vary based on forest type, acclimation to high temperature that decreases $Q_{10}$ [@slotGeneralPatternsAcclimation2015], or leaf traits and leaf age. 
+In evergreen species, $Q_{10}$ has shown to be greater in younger than older leaves [@zhouLeafageEffectsTemperature2015]. 
+Recent observations suggest that tropical understory leaves down-regulate $Q_{10}$ with rising $T_{air}$ [@carterExperimentalWarmingTropical2021a]. 
+Overall, however, we currently lack synthetic understanding of how and why the temperature sensitivity of respiration varies across the forest vertical profile. 
 
 ### VOC production
 
