--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -9350,6 +9350,23 @@
   langid = {english}
 }
 
+@article{slotLargeDifferencesLeaf,
+  title = {Large Differences in Leaf Cuticle Conductance and Its Temperature Response among 24 Tropical Tree Species from across a Rainfall Gradient},
+  author = {Slot, Martijn and Nardwattanawong, Tantawat and Hernández, Georgia G. and Bueno, Amauri and Riederer, Markus and Winter, Klaus},
+  journaltitle = {New Phytologist},
+  volume = {n/a},
+  number = {n/a},
+  issn = {1469-8137},
+  doi = {10.1111/nph.17626},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/nph.17626},
+  urldate = {2021-09-15},
+  abstract = {More frequent droughts and rising temperatures pose serious threats to tropical forests. When stomata are closed under dry and hot conditions, plants lose water through leaf cuticles, but little is known about cuticle conductance (gmin) of tropical trees, how it varies among species and environments, and how it is affected by temperature. We determined gmin in relation to temperature for 24 tropical tree species across a steep rainfall gradient in Panama, by recording leaf drying curves at different temperatures in the laboratory. In contrast with our hypotheses, gmin did not differ systematically across the rainfall gradient; species differences did not reflect phylogenetic patterns; and in most species gmin did not significantly increase between 25 and 50°C. gmin was higher in deciduous than in evergreen species, in species with leaf trichomes than in species without, in sun leaves than in shade leaves, and tended to decrease with increasing leaf mass per area across species. There was no relationship between stomatal and cuticle conductance. Large species differences in gmin and its temperature response suggest that more frequent hot droughts may lead to differential survival among tropical tree species, regardless of species’ position on the rainfall gradient.},
+  langid = {english},
+  keywords = {cuticle conductance,drought tolerance,functional traits,global warming,Panama,rainfall gradient,transpiration,tropical forest},
+  annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17626},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\VFBP8B9C\\Slot et al. - Large differences in leaf cuticle conductance and .pdf}
+}
+
 @report{slotLeafHeatTolerance2020,
   type = {preprint},
   title = {Leaf Heat Tolerance of 147 Tropical Forest Species Varies with Elevation and Leaf Functional Traits, but Not with Phylogeny},
