--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -402,11 +402,12 @@ Differences across forest vertical gradients in biophysical conditions, plant tr
 
 ### Tree metabolism and growth, and survival
 
-**Vertical gradients affect tree metabolism and growth.**
-Whole-tree transpiration and gross primary production (GPP) increase in tandem with increasing tree size, where size is most commonly measured as diameter at breast height (DBH), but functionally linked to metrics such as foliage biomass, crown volume, and height, all of which scale with DBH [@meinzerWaterTransportTrees2001;@kunertRevisedHydrologicalModel2017; @anderson-teixeiraSizerelatedScalingTree2015].
+Tree metabolism and growth and shaped by the positioning of their crowns within the vertical gradient.
+Tree height, crown volume, and foliage biomass all scale with diameter at breast height (DBH), which in turn is a strong predictor of whole-tree transpiration and photosynthesis [@meinzerWaterTransportTrees2001;@kunertRevisedHydrologicalModel2017; @anderson-teixeiraSizerelatedScalingTree2015].
 Specifically, increases are linked to increased leaf area and the increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where higher light availability results in higher leaf area-specific photosynthesis (Table `r table_leaf_metabolism`).
 The net foliar photosynthate production is allocated among functions including respiration, woody growth, foliar turnover, root growth and allocation to root-associated microorganisms, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
-Within a stand, woody growth rates , measured as radial stem growth or biomass increment,  generally increase with tree size [e.g., @muller-landauTestingMetabolicEcology2006, @stephensonRateTreeCarbon2014]. NSC reserves also increase with tree size, such that larger trees have relatively more buffer against biological and biophysical stressors [@niinemetsResponsesForestTrees2010a].
+Within a stand, woody growth rates, measured as radial stem growth or biomass increment,  generally increase with tree size [e.g., @muller-landauTestingMetabolicEcology2006, @stephensonRateTreeCarbon2014]. 
+NSC reserves also increase with tree size, such that larger trees have relatively more buffer against biological and biophysical stressors [@niinemetsResponsesForestTrees2010a].
 
 
 
