rearranged refs for traits

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -267,7 +267,7 @@ $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 
 # refs in this table currently in the nocite field at top of document 
 ```
 
-Sun leaves have anatomical, morphological, and physiological traits that reduce heat and water stress (Table `r table_leaf_traits`). They are generally smaller, thicker, and more deeply lobed, resulting in higher $g_b$ and lower $T_{leaf}-T{air}$ [Fig. `r fig_leaf_T`, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006;@zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a]. Higher stomatal and vein densities allow higher $g_s$ and facilitate higher transpiration respectively [@zwienieckiHydraulicLimitationsImposed2004]. Higher cuticle thickness and trichome density reduce water loss. Steeper leaf angles reduce radiation loads and thereby decrease $T_{leaf}-T{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988]. These traits collectively aid heat dissipation and regulate T_leaf-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA), but their greater thermal capacitance makes them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies, where light is comparatively homogeneous, exposed leaves are shaped more by $T_{air_{max}}$ and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
+Sun leaves have anatomical, morphological, and physiological traits that reduce heat and water stress (Table `r table_leaf_traits`). They are generally smaller, thicker, and more deeply lobed, resulting in higher $g_b$ and lower $T_{leaf}-T{air}$ [Fig. `r fig_leaf_T`, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006;@zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a]. Higher stomatal and vein densities allow higher $g_s$ and facilitate higher transpiration respectively [@zwienieckiHydraulicLimitationsImposed2004]. Higher cuticle thickness and trichome density reduce water loss. Steeper leaf angles reduce radiation loads and thereby decrease $T_{leaf}-T{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988]. These traits collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA), but their greater thermal capacitance makes them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies, where light is comparatively homogeneous, exposed leaves are shaped more by $T_{air_{max}}$ and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
 
 
 Elemental concentrations such as $N_{area}$ and $P_{area}$ contribute to high rates of leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves [Table `r table_leaf_traits`, @scartazzaInvestigatingEuropeanBeech2016; @niinemetsWithincanopyVariationRate2004a; @weerasingheCanopyPositionAffects2014], and may be optimized throughout the vertical canopy gradient [@buckleyOptimalCarbonPartitioning2021]. 
